--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ body{
   background-color:rgba(72,72,72,0.4);
   padding: 30px;
   width: 300px;
+  height: 100%;
   float: left;
   -moz-border-radius: 0 7px 7px 7px;
   -webkit-border-radius: 0 7px 7px 7px;
@@ -166,8 +167,12 @@ canvas{
     width: 3.6%;
     height: 100%;
     margin: 0 1.2%;
-    border-bottom-right-radius: 8px;
-    border-bottom-left-radius: 8px;
+    border: 1px solid black;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit  */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko         */
+    box-sizing: border-box;
 }
 .spacer {
     display:inline-block;
@@ -196,6 +201,54 @@ input.vertical {
   width: 3px;
 }
 
+
+.start_time{
+    float: left;
+    margin-left: -4px;
+}
+.start_time input{
+    border-radius: 5px;
+    width: 8px;
+    background: #DCDAD1;
+}
+.end_time {
+    float: right;
+    margin-right: -27px;
+}
+.end_time input{
+    border-radius: 5px;
+    width: 36px;
+}
+
 .sustain-line {
-    width:100%; text-align:center; border-bottom: 1px solid #000; line-height:0.1em; margin:10px 0 20px;
+    height: 3px; /* Line width of 3 */
+    background: #DCDAD1;
+    border-radius: 5px;
+    margin: 8px 5px 8px 5px;
+}
+/*.sustain-line::before {
+    content: "";
+    display: block;
+    margin: 50%;
+}*/
+#sustain-spacer {
+    height:58px;
+}
+
+.harmonic_settings{
+    display: flex;
+    width: 100%;
+    height: 10%;
+}
+
+.envelope{
+    display:flex;
+    justify-content:
+    space-between;
+    width:100%;
+}
+
+.envelope_label{
+    font-size:14px;
+    text-align:center;
 }
