--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body{
 #form-div {
   background-color:rgba(72,72,72,0.4);
   padding: 30px;
-  width: 300px;
+  width: 350px;
   height: 100%;
   float: left;
   -moz-border-radius: 0 7px 7px 7px;
@@ -123,7 +123,7 @@ canvas{
     z-index: 10;
 }
 
-#form_wrapper {
+#left_pane {
   display: table-cell;
   vertical-align: top;
   height: 100%;
@@ -208,7 +208,7 @@ canvas{
 }
 .end_time {
     float: right;
-    margin-right: -27px;
+    margin-right: -15px;
 }
 .end_time input{
     border-radius: 5px;
@@ -222,14 +222,19 @@ canvas{
     margin: 4.5px 5px 4.5px 3px;
 }
 
-#sustain-spacer {
+.sustain-spacer {
     height:44px;
 }
 
 .harmonic_settings{
+    padding: 8px 15px 8px 8px;
+    margin: 0 0 5px 0;
+    border-radius: 7px;
+    border: solid;
+    border-width: thin;
+}
+.envelope_wrapper{
     display: flex;
-    width: 100%;
-    height: 10%;
 }
 
 .envelope{
@@ -243,4 +248,8 @@ canvas{
 .envelope_label{
     font-size:14px;
     text-align:center;
+}
+
+.harmonic_label{
+    display:block;
 }
