--- a/css/main.css
+++ b/css/main.css
@@ -8,76 +8,50 @@ body{
   height:100%;
 }
 
+form label{
+  display: inline-block;
+  text-align: right;
+  width: 100px;
+}
+
 #form-div {
   background-color:rgba(72,72,72,0.4);
-  padding: 30px;
-  width: 350px;
+  padding: 20px;
+  width: 360px;
   height: 100%;
-  float: left;
   -moz-border-radius: 0 7px 7px 7px;
   -webkit-border-radius: 0 7px 7px 7px;
   border-radius: 0 7px 7px 7px;
   clear:left;
 }
 
-#effects-div {
-  background-color:rgba(72,72,72,0.4);
-  padding: 10px 30px 30px 30px;
-  width: 300px;
-  float: left;
-  margin: 30px 0 0 0;
-  -moz-border-radius: 0 7px 7px 7px;
-  -webkit-border-radius: 0 7px 7px 7px;
-  border-radius: 7px 7px 7px 7px;
-  clear:left;
-}
-
-.effect-div {
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  border-radius: 2px;
-  border:1px solid black;
-  padding: 5px;
-}
-
-
-
 #tab-nav{
-  margin: 0;
   padding: 0;
-  float: left;
   list-style: none;
+  margin-bottom: 0;
 }
 #tab-nav li{
-  background-color:#000;
+  background-color: #000;
   border-bottom: 0;
   padding: 5px 10px;
   text-align:center;
   margin:0px;
-  background:#ccc;
-  float:left;
   margin-right:3px;
-  -moz-border-radius: 7px 7px 0 0;
-  -webkit-border-radius: 7px 7px 0 0;
+  background:rgba(72,72,72,0.4);
+  float:left;
   border-radius: 7px 7px 0 0;
+  color:#777;
+  text-decoration:none;
+  text-align:center;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  cursor: pointer;
 }
 
-#tab-nav li a
-{
-    color:#000;
-    text-decoration:none;
-    text-align:center;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-weight:bold;
-}
 #tab-nav li.current{
-    text-align:center;
     background-color:rgba(72,72,72,0.4);
-}
-
-#tab-nav li.current a {
     color:#FFFFFF;
 }
+
 
 canvas{
   position:absolute;
@@ -97,14 +71,14 @@ canvas{
   position: relative;
   display: table-cell;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   vertical-align: top;
   padding: 2px 2px 25px 25px;
 }
 #canvas_wrapper {
   position: relative;
   width: 100%;
-  height: 70%;
+  height: 70vh;
 }
 
 .remove_button {
@@ -141,7 +115,7 @@ canvas{
 #keys_wrapper{
     position: relative;
     width: 100%;
-    height: 30%;
+    height: 30vh;
     margin: 1% 0 0 0;
 }
 
@@ -250,6 +224,10 @@ canvas{
     text-align:center;
 }
 
-.harmonic_label{
-    display:block;
+.harmonic_header{
+    color: grey;
+}
+
+.settings_form > * {
+    margin: 5px 0;
 }
