--- a/css/main.css
+++ b/css/main.css
@@ -8,13 +8,14 @@ body{
   height:100%;
 }
 
-form label{
+.settings_form label{
   display: inline-block;
   text-align: right;
   width: 100px;
 }
 
-#form-div {
+.form-div {
+  background-color:rgb(72,72,72);
   background-color:rgba(72,72,72,0.4);
   padding: 20px;
   width: 360px;
@@ -24,18 +25,18 @@ form label{
   clear:left;
 }
 
-#tab-nav{
+.tab-nav{
   padding: 0;
   list-style: none;
   margin-bottom: 0;
 }
-#tab-nav li{
+.tab-nav li{
   background-color: #000;
   border-bottom: 0;
   padding: 5px 10px;
-  text-align:center;
-  margin:0px;
-  margin-right:3px;
+  margin: 0;
+  margin-right: 3px;
+  background:rgb(72,72,72);
   background:rgba(72,72,72,0.4);
   float:left;
   border-radius: 7px 7px 0 0;
@@ -46,13 +47,14 @@ form label{
   cursor: pointer;
 }
 
-#tab-nav li.current{
+.tab-nav .current{
+    background-color:rgb(72,72,72);
     background-color:rgba(72,72,72,0.4);
     color:#FFFFFF;
 }
 
 
-canvas{
+.audio_graph{
   position:absolute;
   width: 100%;
   height: 100%;
@@ -66,7 +68,7 @@ canvas{
   margin-bottom: 20px;
 }
 
-#right_pane {
+.right_pane {
   position: relative;
   display: table-cell;
   width: 100%;
@@ -172,31 +174,55 @@ canvas{
 
 .start_time{
     float: left;
-    margin-left: -4px;
+    margin-left: -1px;
 }
 .start_time input{
     border-radius: 5px;
     width: 10px;
-    background: #DCDAD1;
+    border: none;
+    background: transparent;
+    color: #FFF;
 }
 .end_time {
     float: right;
-    margin-right: -15px;
+    margin-right: -20px;
 }
 .end_time input{
     border-radius: 5px;
     width: 36px;
+    border: none;
+    background: transparent;
+    color: #FFF;
+}
+
+.harmonic_number{
+    border-radius: 5px;
+    width: 46px;
+    font-size: 15px;
+    border: none;
+    background: transparent;
+    color: grey !important;
+}
+
+input[type=number]{
+    border-radius: 5px;
+    border: none;
+    background: transparent;
+    color: #FFF;
 }
 
 .sustain-line {
-    height: 3px; /* Line width of 3 */
+    width:100%;
+    height:90px;
+    margin: 5px 0 5px 0;
+    /*height: 3px; /* Line width of 3
     background: #fff;
     border-radius: 5px;
-    margin: 4.5px 5px 4.5px 3px;
+    margin: 4.5px 5px 4.5px 3px;*/
 }
 
 .sustain-spacer {
-    height:44px;
+    height:19px;
 }
 
 .harmonic_settings{
@@ -229,4 +255,9 @@ canvas{
 
 .settings_form > * {
     margin: 5px 0;
+}
+
+.optional_property {
+    text-align: center;
+    display: none;
 }
